# internal/service/user/types.go
@@ -11,6 +11,7 @@ import (
 	"github.com/raozhaizhu/go-estate/internal/util"
 	"github.com/raozhaizhu/go-estate/internal/worker"
 	appError "github.com/raozhaizhu/go-estate/pkg/app_error"
+	objectStore "github.com/raozhaizhu/go-estate/pkg/object_store"
 )
 
 /** ====================================================================================
@@ -24,19 +25,21 @@ type service struct {
 	txRunner     db.TxRunner
 	sessionCache cache.SessionCache
 	distributor  worker.TaskDistributor
+	objectStore  objectStore.StorageService
 }
 
 // New 返回用户服务指针
 func New(deps app.Deps) *service {
-	return &service{store: deps.Store, txRunner: deps.Store, sessionCache: deps.Cache, distributor: deps.Distributor}
+	return &service{store: deps.Store, txRunner: deps.Store, sessionCache: deps.Cache, distributor: deps.Distributor, objectStore: deps.ObjectStore}
 }
 
 // DTO 返回给 Controller 的 User 数据结构
 type DTO struct {
-	ID       int32     `json:"id" example:"1"`
-	Username string    `json:"username" example:"Bob"`
-	Email    string    `json:"email" example:"Bob@test.com"`
-	Role     role.Role `json:"role" example:"1"`
+	ID        int32     `json:"id" example:"1"`
+	Username  string    `json:"username" example:"Bob"`
+	Email     string    `json:"email" example:"Bob@test.com"`
+	Role      role.Role `json:"role" example:"1"`
+	AvatarKey string    `json:"avatar_key" example:"avatars/default_avatar.png"`
 }
 
 /** ====================================================================================
@@ -44,29 +47,38 @@ type DTO struct {
  * =====================================================================================
  */
 
-// CreateUserInput
+// CreateUserInput 创建用户输入
 type CreateUserInput struct {
-	Username string
-	Password string
-	Email    string
+	Username  string
+	Password  string
+	Email     string
+	AvatarKey string
 }
 
-// toDBParams
+// toDBParams 将CreateUserInput转化为CreateUserParams
 func (input *CreateUserInput) toDBParams(role role.Role) (db.CreateUserParams, error) {
 	// 角色类型必须合法
 	if !role.IsValid() {
 		return db.CreateUserParams{}, ErrBadRole
 	}
+
 	// 哈希密码
 	hashedPassword, err := util.HashPassword(input.Password)
 	if err != nil {
 		return db.CreateUserParams{}, err
 	}
+
+	// 设置头像
+	if input.AvatarKey != "" {
+		input.AvatarKey = objectStore.DefaultAvatarUrl
+	}
+
 	// 创建用户
 	params := db.CreateUserParams{
 		Username:       input.Username,
 		HashedPassword: hashedPassword,
 		Email:          input.Email,
+		AvatarKey:      input.AvatarKey,
 		Role:           int16(role),
 	}
 
@@ -92,8 +104,9 @@ type GetUserInput struct {
 type UpdateUserInput struct {
 	Username string
 
-	Password *string
-	Email    *string
+	Password  *string
+	Email     *string
+	AvatarKey *string
 }
 
 // ToDBParams
@@ -102,7 +115,7 @@ func (input *UpdateUserInput) ToDBParams() (db.UpdateUserParams, error) {
 		Username: input.Username,
 	}
 	// 什么都没改, 不进入数据库, 直接返错
-	if input.Password == nil && input.Email == nil {
+	if input.Password == nil && input.Email == nil && input.AvatarKey == nil {
 		return db.UpdateUserParams{}, appError.ErrEmptyUpdate
 	}
 	// 更新密码和改密时间
@@ -120,4 +133,14 @@ func (input *UpdateUserInput) ToDBParams() (db.UpdateUserParams, error) {
 	}
 
 	return params, nil
+}
+
+/** ====================================================================================
+ * 🏁 GenerateAvatarPresignUrl
+ * =====================================================================================
+ */
+
+type GenerateAvatarPresignUrlInput struct {
+	Extension   string
+	ContentType string
 }
